[gd_scene load_steps=5 format=3 uid="uid://bglrsxf1kg5ax"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_0hpx6"]
[ext_resource type="Texture2D" uid="uid://chcxnd5eyxva6" path="res://icon.svg" id="1_sl7id"]

[sub_resource type="LabelSettings" id="LabelSettings_h1fo3"]
font_size = 32
outline_size = 3
outline_color = Color(0, 0, 0, 1)
shadow_size = 8

[sub_resource type="LabelSettings" id="LabelSettings_illo4"]
font_size = 32

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0hpx6")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_sl7id")
stretch_mode = 6

[node name="AltarButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -18.0
offset_top = -20.0
offset_right = 22.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("1_sl7id")

[node name="FinalStructureButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 293.0
offset_top = -64.0
offset_right = 421.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("1_sl7id")

[node name="StationNewsButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -426.0
offset_top = -64.0
offset_right = -298.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("1_sl7id")

[node name="FollowersLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
text = "
"
horizontal_alignment = 1

[node name="MoneyLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 16.86
offset_right = 20.0
offset_bottom = 39.86
grow_horizontal = 2
text = "
"
horizontal_alignment = 1

[node name="MoneySecondLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.603
anchor_right = 0.603
offset_left = -19.6561
offset_top = 16.0
offset_right = 20.3439
offset_bottom = 42.0
grow_horizontal = 2
text = "
"
horizontal_alignment = 1

[node name="UpdateResourcesTimer" type="Timer" parent="."]

[node name="MessageLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 23.0
grow_horizontal = 0

[node name="WinScreen" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.552956, 0.552956, 0.552956, 1)

[node name="Label" type="Label" parent="WinScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -189.5
offset_top = -59.0
offset_right = 189.5
offset_bottom = 59.0
grow_horizontal = 2
grow_vertical = 2
text = "YOU WIN"
label_settings = SubResource("LabelSettings_h1fo3")
horizontal_alignment = 1

[node name="IntroScreen" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="QuestionLabel" type="Label" parent="IntroScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -523.0
offset_top = -269.0
offset_right = 509.0
offset_bottom = -148.0
grow_horizontal = 2
grow_vertical = 2
text = "YOU WIN"
label_settings = SubResource("LabelSettings_h1fo3")
horizontal_alignment = 1
autowrap_mode = 1

[node name="InitialInterview" type="ItemList" parent="IntroScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -426.0
offset_top = -63.0
offset_right = 430.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 16
max_text_lines = 2
auto_height = true
text_overrun_behavior = 0

[node name="EventScreen" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Event1" type="TextureButton" parent="EventScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -416.0
offset_top = -211.0
offset_right = -98.0
offset_bottom = 205.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("1_sl7id")
stretch_mode = 6

[node name="Title" type="Label" parent="EventScreen/Event1"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 35.0
grow_horizontal = 2
text = "awdawdawdawadw"
label_settings = SubResource("LabelSettings_illo4")
horizontal_alignment = 1

[node name="Description" type="Label" parent="EventScreen/Event1"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 22.0
offset_bottom = 204.0
grow_horizontal = 2
grow_vertical = 2
text = "esta es una descripcion larga de algo que hay que hacer pero no se exactametne el que"
horizontal_alignment = 3
autowrap_mode = 3

[node name="Event2" type="TextureButton" parent="EventScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 100.0
offset_top = -212.0
offset_right = 444.0
offset_bottom = 214.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("1_sl7id")
stretch_mode = 6

[node name="Title" type="Label" parent="EventScreen/Event2"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 35.0
grow_horizontal = 2
text = "awdawdawdawadw"
label_settings = SubResource("LabelSettings_illo4")
horizontal_alignment = 1

[node name="Description" type="Label" parent="EventScreen/Event2"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 22.0
offset_bottom = 204.0
grow_horizontal = 2
grow_vertical = 2
text = "esta es una descripcion larga de algo que hay que hacer pero no se exactametne el que"
horizontal_alignment = 3
autowrap_mode = 3

[connection signal="pressed" from="AltarButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="FinalStructureButton" to="." method="_on_create_final_structure_pressed"]
[connection signal="pressed" from="StationNewsButton" to="." method="_on_station_news_button_pressed"]
[connection signal="timeout" from="UpdateResourcesTimer" to="." method="_on_update_resources_timer_timeout"]
[connection signal="item_clicked" from="IntroScreen/InitialInterview" to="." method="_on_initial_interview_item_clicked"]
[connection signal="pressed" from="EventScreen/Event1" to="." method="_on_event_1_pressed"]
[connection signal="pressed" from="EventScreen/Event2" to="." method="_on_event_2_pressed"]
